--- a/chart/tests/e2e/minio.yaml
+++ b/chart/tests/e2e/minio.yaml
@@ -62,7 +62,7 @@ spec:
           lifecycle:
             postStart:
               exec:
-                command: [mkdir, -p, /data/my-bucket]
+                command: [mkdir, -p, /data/my-bucket, /data/test-bucket-1, /data/test-bucket-2, /data/logs-bucket]
           readinessProbe:
             httpGet:
               path: /minio/health/ready
