chore: update default values
Signed-off-by: Sn0rt <wangguohao.2009@gmail.com>

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -13,8 +13,8 @@ image:
 
 # CronJob scheduling configuration
 cronJob:
-  # Cron expression, runs every hour by default
-  schedule: "0 * * * *"
+  # Cron expression, runs daily at 8 AM by default
+  schedule: "0 8 * * *"
   # Number of job history to retain
   successfulJobsHistoryLimit: 3
   failedJobsHistoryLimit: 1
