--- a/chart/templates/cronjob.yaml
+++ b/chart/templates/cronjob.yaml
@@ -33,15 +33,19 @@ spec:
             - /bin/bash
             - -c
             - |
-              echo "Checking required tools..."
-              if ! command -v python3 &> /dev/null; then
-                echo "Error: python3 not found"
-                exit 1
+              # Check or install boto3
+              if ! python3 -c "import boto3" 2>/dev/null; then
+                echo "boto3 not found, installing..."
+                pip3 install boto3
+                if ! python3 -c "import boto3" 2>/dev/null; then
+                  echo "Error: Failed to install boto3"
+                  exit 1
+                fi
+                echo "boto3 installed successfully"
+              else
+                echo "boto3 is already available"
               fi
-              if ! command -v pip3 &> /dev/null; then
-                echo "Error: pip3 not found"
-                exit 1
-              fi
+
               echo "Required tools check passed"
 
               echo "Multi-cluster deployment detected, applying random delay to avoid conflicts..."
