chore: remove namesapce of cronjob name
Signed-off-by: Sn0rt <wangguohao.2009@gmail.com>

--- a/chart/templates/cronjob.yaml
+++ b/chart/templates/cronjob.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ $bucket.name | replace "_" "-" | replace "." "-" | lower }}-{{ $.Release.Namespace }}
+  name: {{ $bucket.name | replace "_" "-" | replace "." "-" | lower }}
   namespace: {{ $.Release.Namespace }}
   labels:
     {{- include "s3-housekeeping.labels" $ | nindent 4 }}
