--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -4,8 +4,8 @@ debug: true
 
 # Container image configuration
 image:
-  repository: public.ecr.aws/lambda/python
-  tag: "3.11"
+  repository: ghcr.io/sn0rt/utils
+  tag: "utils-v0.0.3"
   pullPolicy: IfNotPresent
 
 
